# FolderSync

./: .gitignore  AGENT.md  README.md  pyproject.toml
.kiro/specs/folder-sync/: design.md  requirements.md  tasks.md
src/: __init__.py  __main__.py  logging_config.py
src/folder_sync/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_logging_config.py
