[project]
name = "folder-sync"
version = "0.1.0"
description = "文件夹同步工具 - 支持实时监控和手动同步"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Folder Sync Team" }
]
keywords = ["sync", "folder", "file", "backup", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "pyside6>=6.10.1",
    "watchdog>=6.0.0",
]

[project.scripts]
folder-sync = "folder_sync.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folder_sync"]

[dependency-groups]
dev = [
    "hypothesis>=6.150.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "watchdog.*",
]
ignore_missing_imports = true
